# Ze-Delivery

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.env_files/: .env.dev  .env.example
config/: settings.py  urls.py
store/: admin.py  models.py  serializers.py  views.py
store/migrations/: 0001_initial.py
